--- a/pdftotxt.yaml
+++ b/pdftotxt.yaml
@@ -1,19 +1,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
+
 Resources:
   pdftotxt:
     Type: 'AWS::Serverless::Function'
     Properties:
+      FunctionName: pdfToTextLambda
       Handler: lambda_function.lambda_handler
       Runtime: python3.7
       CodeUri: .
-      Description: ''
+      Description: 'PDF to Text Lambda Function'
       MemorySize: 512
       Timeout: 900
-      Role: 'arn:aws:iam::844028273225:role/lambda_s3'
+      Role: 'arn:aws:iam::844028273225:role/lambda_s3'  # Keep as-is unless role changes
       Environment:
         Variables:
-          TARGET_BUCKET: gl-inter-store
+          TARGET_BUCKET: open-search-lmd-sept-response
+          CODEBUILD_PROJECT: arn:aws:codebuild:ap-south-1:275214306002:project/lambda-pdftotxt-build
       Layers:
         - 'arn:aws:lambda:ap-northeast-1:844028273225:layer:tika:1'
