--- a/pdftotxt.yaml
+++ b/pdftotxt.yaml
@@ -8,8 +8,8 @@ Resources:
     Properties:
       FunctionName: pdfToTextLambda
       Handler: lambda_function.lambda_handler
-      Runtime: python3.7
-      CodeUri: .
+      Runtime: python3.10
+      CodeUri: ./src
       Description: 'PDF to Text Lambda Function'
       MemorySize: 512
       Timeout: 900
