--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
       - echo "Packaging CloudFormation template"
       - |
         aws cloudformation package \
-          --template-file .aws-sam/build/template.yaml \
+          --template-file src/.aws-sam-build/template.yaml \
           --s3-bucket ${S3_BUCKET} \
           --output-template-file lambdaoutput.yaml
 
