--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,12 +20,12 @@ phases:
 
   build:
     commands:
+      - echo "Building SAM application"
+      - sam build --template-file src/pdftotxt.yaml
+      - echo "Contents of build directory:"
+      - ls -al .aws-sam/build
       - echo "Packaging CloudFormation template"
-      - |
-        aws cloudformation package \
-          --template-file src/.aws-sam-build/template.yaml \
-          --s3-bucket ${S3_BUCKET} \
-          --output-template-file lambdaoutput.yaml
+      - aws cloudformation package --template-file .aws-sam/build/template.yaml --s3-bucket ${S3_BUCKET} --output-template-file lambdaoutput.yaml
 
 
 artifacts:
